Mac: Make the Cocoa blocked plugins bubble shorter.

Now that flash is the only plugin, this dialog has a lot less to say,
and has too much unwanted white space.

The height of the Cocoa bubble is a hardcoded magic number specific to
this dialog. Make it smaller. The dialog will be replaced with
a toolkit-views version soon.

Bug: 773218
Change-Id: Ie828c7d88415c3e1d42c7e280fdd5bae60e8cb71
Reviewed-on: https://chromium-review.googlesource.com/746461
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Commit-Queue: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#512964}
Former-commit-id: 5f966630e46da3fc1fa5858e4d4db4118b09943e